feature: adding the import json / markdown method
- from frontend
  - adding the showing of the project structure
  - adding the import json/markdown method

- fomr backend
  - adding import json method
  - TODO: adding the import markdown method
